# pir_lenny_robot

./: .gitignore  README.md  installationNotesPIR.txt
lenny_bringup/: CMakeLists.txt  package.xml
lenny_bringup/launch/: pir_lenny_robot.launch  pir_lenny_robot_withGrippers.launch  pir_run_state_machine.launch
lenny_data/: CMakeLists.txt  package.xml
lenny_data/launch/: motion_params.launch  param.launch  task_params.launch
lenny_data/param/: motion_parameters.yaml  pick_and_place_bottles.yaml  pick_and_place_bottles_simulation.yaml  pick_and_place_parameters.yaml
lenny_description/: CMakeLists.txt  package.xml
lenny_description/urdf/: robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro
lenny_fake_components/: CMakeLists.txt  package.xml
lenny_motion/: CMakeLists.txt  package.xml
lenny_motion/include/lenny_motion/: motion_executor.h  motion_utilities.h
lenny_motion/src/: motion_executor.cpp
lenny_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
lenny_moveit_config/config/: motoman_sda10f.srdf
lenny_moveit_config/launch/: calibration_moveit_planning_execution.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  planning_context.launch  ros_controllers.launch  (+2 more)
lenny_msgs/: CMakeLists.txt  package.xml
lenny_state_machine/: CMakeLists.txt  package.xml
lenny_test/: CMakeLists.txt  package.xml
pir_lenny_robot/: CMakeLists.txt  package.xml
put_objects_rviz/: CMakeLists.txt  package.xml
vision/: CMakeLists.txt  package.xml
(+44 files in other folders)
